namespace CardGameEngine.EventSystem.Events.ArtefactEvents
{
    public class ArtefactActivateEvent : ArtefactEvent
    {
    }
}