namespace CardGameEngine.EventSystem.Events.CardEvents
{
    public class CardDeleteEvent : CardEvent
    {
    }
}