namespace CardGameEngine.EventSystem.Events.CardEvents
{
    public class CardMarkUpgradeEvent : CardEvent
    {
    }
}