namespace CardGameEngine.EventSystem.Events.CardEvents
{
    public class CardPlayEvent : CardEvent
    {
    }
}