namespace CardGameEngine.EventSystem.Events.CardEvents
{
    public class CardUpgradeEvent : CardEvent
    {
    }
}