namespace CardGameEngine.EventSystem.Events.CardEvents.KeywordEvents
{
    public class CardKeywordAddEvent : CardKeywordEvent
    {
    }
}