namespace CardGameEngine.EventSystem.Events.CardEvents.KeywordEvents
{
    public class CardKeywordRemoveEvent : CardKeywordEvent
    {
    }
}