namespace CardGameEngine.EventSystem.Events.CardEvents.KeywordEvents
{
    public class CardKeywordTriggerEvent : CardKeywordEvent
    {
    }
}