namespace CardGameEngine.EventSystem.Events
{
    public abstract class Event
    {
    }
}